@@ -4,24 +4,27 @@ import app.entities.products.materials.planks.Beam;
 import app.entities.products.materials.planks.Fascia;
 import app.entities.products.materials.planks.Post;
 import app.entities.products.materials.planks.Rafter;
-import app.entities.products.materials.roof.RoofCover;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 public class TestPlankFactory {
 
-    public static List<Integer> preCutsLengths = Arrays.asList(300, 330, 360, 390, 420, 450, 480, 510, 540, 570, 600);
+    public static List<Integer> PRE_CUT_LENGTHS = new ArrayList<>(Arrays.asList(300, 330, 360, 390, 420, 450, 480, 510, 540, 570, 600));
+    public static final List<Integer> SHORT_PRE_CUTS_LENGTHS = List.of(300, 330, 360, 390);
+    public static final List<Integer> LONG_PRE_CUTS_LENGTHS = List.of(300, 330, 360, 390, 400, 700);
+
 
     public static Post createStandardPost() {
         return new Post(
                 1,
-                "Standard Test Post",
-                "Basic post for structural testing",
-                100.0,
-                150,
-                preCutsLengths,
-                "pcs",
+                "Standard Post",
+                "Basic post for testing",
+                .144,
+                .2,
+                PRE_CUT_LENGTHS,
+                "cm",
                 25,
                 25,
                 5
@@ -30,45 +33,43 @@ public class TestPlankFactory {
 
     public static Beam createStandardBeam() {
         return new Beam(
-                1,
+                2,
                 "Standard Beam",
                 "Basic beam for testing",
-                120.0,
-                180.0,
-                preCutsLengths,
-                "pcs",
+                .252,
+                .35,
+                PRE_CUT_LENGTHS,
+                "cm",
                 25,
                 25,
                 340
         );
     }
 
-    public static Beam createShorterBeam() {
-        preCutsLengths.removeIf(n -> n > 400);
+    public static Beam createShorterGapBeam() {
         return new Beam(
-                1,
+                2,
                 "Shorter Beam",
-                "Shorter max distance beam",
-                120.0,
-                180.0,
-                preCutsLengths,
-                "pcs",
+                "Shorter max gap beam",
+                .216,
+                .3,
+                PRE_CUT_LENGTHS,
+                "cm",
                 25,
                 25,
                 240
         );
     }
 
-    public static Beam createLongerBeam() {
-        preCutsLengths.add(700);
+    public static Beam createLongerGapBeam() {
         return new Beam(
-                1,
+                2,
                 "Longer Beam",
                 "Longer max distance beam",
-                120.0,
-                180.0,
-                preCutsLengths,
-                "pcs",
+                .288,
+                .4,
+                LONG_PRE_CUTS_LENGTHS,
+                "cm",
                 25,
                 25,
                 400
@@ -77,43 +78,41 @@ public class TestPlankFactory {
 
     public static Rafter createStandardRafter() {
         return new Rafter(
-                1,
+                3,
                 "Standard Rafter",
                 "Basic rafter for testing",
-                110.0,
-                160.0,
-                preCutsLengths,
-                "pcs",
+                .216,
+                .3,
+                PRE_CUT_LENGTHS,
+                "cm",
                 25,
                 25
         );
     }
 
     public static Rafter createShorterRafter() {
-        preCutsLengths.removeIf(n -> n > 400);
         return new Rafter(
-                1,
+                3,
                 "Shorter Rafter",
                 "Shorter max length rafter",
-                110.0,
-                160.0,
-                preCutsLengths,
-                "pcs",
+                .18,
+                .25,
+                SHORT_PRE_CUTS_LENGTHS,
+                "cm",
                 25,
                 25
         );
     }
 
     public static Rafter createLongerRafter() {
-        preCutsLengths.add(700);
         return new Rafter(
-                1,
+                3,
                 "Longer Rafter",
                 "Longer max length rafter",
-                110.0,
-                160.0,
-                preCutsLengths,
-                "pcs",
+                .252,
+                .35,
+                LONG_PRE_CUTS_LENGTHS,
+                "cm",
                 25,
                 25
         );
@@ -121,31 +120,15 @@ public class TestPlankFactory {
 
     public static Fascia createStandardFascia() {
         return new Fascia(
-                1,
+                4,
                 "Standard Fascia",
                 "Basic fascia board for testing",
-                80.0,
-                130.0,
-                preCutsLengths,
-                "pcs",
+                .129,
+                .18,
+                PRE_CUT_LENGTHS,
+                "cm",
                 25,
                 25
-        );
-    }
-
-    public static RoofCover createStandardRoofCover() {
-        return new RoofCover(
-                1,
-                "Standard roof",
-                "Clear strong roof",
-                25,
-                55,
-                preCutsLengths,
-                "m",
-                100,
-                20,
-                10,
-                55
         );
     }
 }
